--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
     </header>
     <section>
         <div class="nav">
-            <ul class="w">
+            <ul class="w navi">
                 <li><a href="#">Hue 조명</a></li>
                 <li>|</li>
                 <li><a href="#">LED 조명</a></li>
@@ -71,14 +71,14 @@
                 <li><a href="#">옥외조명기구</a></li>
 
             </ul>
-            <div style="border:1px solid #00f;">
+            <div>
                 <div class="main">
 
                     <ul class="rel slides">
                         <li class="main_1 abs slide">
                             <div class="cl">
                                 <div class="le main1" style="text-align:center;">
-                                    <img src="img/main01.png" style="height:80%; width:auto; margin:0 auto;">
+                                    <img src="img/main01.png">
                                     <h4>스톤조명301 </h4>
                                     <p>고급스러운 스톤의 리얼한 텍스처를 완벽하게 구현한 프리미엄 조명</p>
                                 </div>
@@ -137,13 +137,8 @@
                         </li>
                         <li class="main_4"><img src="img/main_4.jpg" class="img"></li>
                     </ul>
-                    <div class="btn">
-                        <div class="bt">&nbsp;</div>
-                        <div class="bt">&nbsp;</div>
-                        <div class="bt">&nbsp;</div>
-                    </div>
                 </div>
-
+                <div class="w">
                 <div class="pro rel">
                     <div class="pro_n abs">
                         <h4 class="abs">NEW</h4>
@@ -222,6 +217,7 @@
                     <a href="javascript:winOpen();">방명록 바로가기<i class="fa fa-user-circle-o"></i></a>
                 </div>
             </div>
+        </div>
             <footer>
                 <div class="w">
                     <div class="f_logo"><img src="img/logo.png"></div>
