--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,7 @@
                         <li class="main_4"><img src="img/main_4.jpg" class="img"></li>
                     </ul>
                 </div>
-                <div class="w">
+                <div class="pic_3">
                 <div class="pro rel">
                     <div class="pro_n abs">
                         <h4 class="abs">NEW</h4>
