--- a/public/index.html
+++ b/public/index.html
@@ -227,7 +227,7 @@
     </section>
 
     <script defer src="https://www.gstatic.com/firebasejs/5.6.0/firebase.js"></script>
-    <!-- <script src="js/main.js"></script> -->
+    <script src="js/main.js"></script>
 </body>
 
 </html>
